clean up and fix spacing

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 
 	.square {
 		width: 40%;
-		max-height: 60px;
+		max-height: 45px;
 	}
 
 	.song-choice {
@@ -93,14 +93,16 @@ button {
 	background: none;
 	text-transform: uppercase;
 	height: 100%;
-	font-weight: 700;
+	font-weight: 600;
 	color: #82c4c3;
-	letter-spacing: 0px;
+	letter-spacing: -.5px;
 	font-size: inherit;
 	transition: all 0.3s;
 	-webkit-transition: all 0.3s;
 	-moz-transition: all 0.3s;
 	outline: none;
+	margin-left: 5px;
+	margin-right: 5px;
 }
 
 button:hover {
